# Savime

./: CMakeLists.txt  COPYING  README  README.md  config.h  config.h.in  install_manifest.txt
client/: Makefile.am~  client.cpp
configuration/: default_config_manager.cpp  default_config_manager.h  model_configuration_manager.cpp  model_configuration_manager.h
connection/: compile_map_program.sh~  default_connection_manager.cpp  default_connection_manager.h  monet_mapi_example.c~
core/: Makefile.am~  builder.cpp  configure.ac~  main.cpp  main.cpp~  metadata.cpp  query_data_manager.cpp  server.h~  system_logger.cpp  time_evaluator.cpp
core/include/: abstract_storage_manager.h  builder.h  config_manager.h  connection_manager.h  dynamic_bitset.h  engine.h  metadata.h  optimizer.h  parser.h  query_data_manager.h  rtree.h  savime.h  savime_hash.h  session.h  storage_manager.h  symbols.h  system_logger.h  time_evaluator.h  types.h  util.h
docs/: CMakeLists_8txt.html  README_8md.html  ____template__builder_8h.html  ____template__builder_8h__incl.map  ____template__builder_8h__incl.md5  ____template__builder_8h_source.html  abstract__storage__manager_8h.html  abstract__storage__manager_8h__dep__incl.dot  abstract__storage__manager_8h__dep__incl.map  abstract__storage__manager_8h__dep__incl.md5  abstract__storage__manager_8h__incl.dot  abstract__storage__manager_8h__incl.map  abstract__storage__manager_8h__incl.md5  abstract__storage__manager_8h_source.html  abstract__template_8h.html  abstract__template_8h__dep__incl.map  abstract__template_8h__dep__incl.md5  abstract__template_8h__incl.map  abstract__template_8h__incl.md5  abstract__template_8h_source.html  aggregate_8cpp.html  aggregate_8cpp__incl.dot  aggregate_8cpp__incl.md5  aggregate_8h.html  aggregate_8h__dep__incl.map  aggregate_8h__dep__incl.md5  aggregate_8h__incl.map  aggregate_8h__incl.md5  aggregate_8h_source.html  annotated.html  arithmetic_8cpp.html  arithmetic_8cpp__incl.dot  arithmetic_8cpp__incl.md5  bison_8cpp.html  bison_8cpp__incl.dot  bison_8cpp__incl.map  bison_8cpp__incl.md5  bison_8h.html  bison_8h__dep__incl.map  bison_8h__dep__incl.md5  (+1630 more)
docs/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_16.js  all_17.js  all_18.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_10.js  classes_11.js  classes_12.js  classes_13.js  classes_14.js  classes_15.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  (+158 more)
engine/: aggregate.cpp  arithmetic.cpp  assignLearningTAR.cpp  catalyst.cpp  comparison.cpp  create_dataset.cpp  create_tar.cpp  create_tars.cpp  create_type.cpp  cross_join.cpp  ddl_operators.cpp  default_engine.cpp  dimjoin.cpp  dml_operators.cpp  drop_dataset.cpp  drop_tar.cpp  drop_tars.cpp  drop_type.cpp  equijoin.cpp  filter.cpp  load_subtar.cpp  logical.cpp  predict.cpp  predictor.cpp  register_model.cpp  reorient.cpp  save.cpp  scan.cpp  select.cpp  show.cpp  split.cpp  subset.cpp  user_defined.cpp  viz.cpp
engine/include/: aggregate_buffer.h  aggregate_config.h  aggregate_engine.h  create_tar.h  ddl_operators.h  default_engine.h  dimjoin.h  dml_operators.h  filter.h  json_parser.h  load_subtar.h  ml_operators.h  predict.h  predictor.h  subset.h  viz.h  viz_config.h
engine/misc/: curl.cpp  json.cpp  prediction_model.cpp
engine/misc/include/: curl.h  json.h  prediction_model.h
etc/: install_catalyst.sh  install_hugetlbs.sh  mount_ramfs.sh  savime.boot  savime.config
examples/: 100ts.data  catalyst_grad.py  coords.data  dsexplicit  expected.out  result.out  run.sh  savime-trace.txt  test.sh  test_savime.sh  test_savime_catalyst.sh  type.data
lib/: protocol.h  savime_lib.cpp  savime_lib.h
metada/: default_metada_manager.h  default_metadata_manager.cpp
optimizer/: default_optimizer.cpp  default_optimizer.h  dependency_checker.cpp  operation_splitter.cpp  query_cost.cpp  query_graph.cpp
parser/: anal.l~  bison.cpp  bison.h  build_gramar~  build_grammar.sh  default_parser.cpp  default_parser.h  flex.cpp  flex.h  grammar.tab.h~  grammar.y  grammar.y~  lexer.l  lexer.l~  parse_tree.h~  register_model_parser.cpp  register_model_parser.h  schema_builder.cpp  schema_builder.h  tree.h
query/: default_query_data_manager.cpp  default_query_data_manager.h
session/: default_session.cpp  default_session.h  default_session_manager.cpp  default_session_manager.h
staging/: .server.cpp.swp  chann.h  rdma_utils.cpp  rdma_utils.h  server.cpp  staging.cpp  staging.h  staging_dummy.cpp  stserver.cpp  test_buffer.cpp  test_files.cpp
staging/mapped_memory/: Makefile  Makefile.am  Makefile.in  mapped_memory.cpp  mapped_memory.h
staging/mapped_memory/.deps/: mapped_memory.Po
staging/rdmap/: Makefile  Makefile.am  Makefile.in  client.cpp  common.cpp  common.h  log.h  messages.cpp  messages.h  rdmap.cpp  rdmap.h  server.cpp
staging/rdmap/.deps/: librdmap_a-rdmap.Po
storage/: default_apply_template.h  default_storage_manager.cpp  default_storage_manager.h  default_template.h  template_builder.h
test/: mock_builder.cpp  mock_builder.h  mock_logger.h  test_main.cpp  test_queries_creator.cpp  test_queries_creator.h  test_queries_results.cpp  test_utils.cpp  test_utils.h
test/catch2/: catch.hpp
test/engine/: engine_test.cpp  mock_engine.cpp  mock_engine.h
test/metadata/: metadata_test.cpp  metadata_test.h
test/optimizer/: mock_optimizer.h  test_optimizer.cpp
test/parser/: mock_parser.h  parser_test.cpp
test/query/: mock_query_data.h  teste_query_data.cpp
test/storage/: mock_default_storage_manager.cpp  mock_default_storage_manager.h  storage_test.cpp
